fix: remove Python postinstall and conflicting package.json files for Vercel deployment
- Removed pip install from postinstall script (Python not needed for Next.js deployment)
- Removed tools/GSHEET/package.json (uses workspace package.json)
- Removed tools/inventory-management/package.json (uses workspace package.json)
- Added Python files to .vercelignore to reduce build size
- Keep only main package.json with Next.js 15.5.4 in dependencies

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cleanup:uploads": "node scripts/cleanup-uploads.mjs",
     "cleanup:logs": "node scripts/cleanup-logs.js",
     "cleanup:all": "npm run cleanup:uploads && npm run cleanup:logs",
-    "postinstall": "npm run install:python-deps && npm run setup:projecthub",
+    "postinstall": "echo 'Installation complete - skipping Python deps and projecthub setup'",
     "install:python-deps": "pip install -r requirements.txt",
     "setup:projecthub": "cd projecthub && npm link"
   },
