chore: completely remove Python dependencies and scripts
- Removed requirements.txt (no Python packages needed)
- Removed Python utility files (logger.py, port_utils.py, sanitize.py)
- Removed install:python-deps and setup:projecthub scripts from package.json
- Removed postinstall hook (no longer needed)
- Project is now 100% Node.js/JavaScript based
- All tools use Node.js/Express backends with React frontends

--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "workspace": "npm run dev",
     "cleanup:uploads": "node scripts/cleanup-uploads.mjs",
     "cleanup:logs": "node scripts/cleanup-logs.js",
-    "cleanup:all": "npm run cleanup:uploads && npm run cleanup:logs",
-    "postinstall": "echo 'Installation complete - skipping Python deps and projecthub setup'",
-    "install:python-deps": "pip install -r requirements.txt",
-    "setup:projecthub": "cd projecthub && npm link"
+    "cleanup:all": "npm run cleanup:uploads && npm run cleanup:logs"
   },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
