fix: remove workspaces config to fix Vercel Next.js detection
The Next.js app is in the ROOT directory (project-hub), not in a subdirectory.
The workspaces config was confusing Vercel into thinking this is a monorepo.

Changes:
- Removed workspaces array from package.json
- Root package.json now directly contains Next.js 15.5.4 in dependencies
- Added workspace directories to .vercelignore to exclude them from build
- Vercel Root Directory should be set to: project-hub (or leave blank)

This ensures Vercel:
1. Finds package.json in root
2. Sees Next.js in dependencies
3. Runs 'npm install' which installs Next.js
4. Builds the Next.js app successfully

--- a/.vercelignore
+++ b/.vercelignore
@@ -8,3 +8,7 @@ dist
 requirements.txt
 *.py
 __pycache__
+projecthub
+tools/*/backend/node_modules
+tools/*/frontend/node_modules
+tools/*/client/node_modules
