fix: explicitly set root directory in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
+  "rootDirectory": ".",
   "regions": ["iad1"],
   "functions": {
     "app/api/**/*.ts": {
