--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.51.20",
+    "@vercel/blob": "^2.0.0",
     "apicache": "^1.6.3",
     "archiver": "^7.0.1",
     "axios": "^1.6.0",
@@ -76,7 +78,6 @@
     "react-toastify": "^11.0.5",
     "shopify-api-node": "^3.12.3",
     "tailwind-merge": "^3.3.1",
-    "@tailwindcss/postcss": "^4",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
